# pyclamav

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.json  config.py  hello.py  log.py  pyclamav.py  pyclamd.py  pyproject.toml  requirements.txt  scan.py  utils.py
.github/workflows/: pylint.yml  pytest.yml
lib/: config.py  log.py  pyclamd.py  scan.py  utils.py
tests/: pyclamav_test.py
